--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lyonjs-eventloop",
-  "version": "0.1.0",
-  "private": true,
+  "name": "event-loop",
+  "version": "0.0.1",
+  "private": false,
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
